fix: scrollbar behavior

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -7,14 +7,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: overlay;
 }
 
-.custom-scrollbars #content::-webkit-scrollbar {
-  @apply w-2;
+.custom-scrollbar body::-webkit-scrollbar {
+  @apply w-1.5;
 }
 
-.custom-scrollbars #content::-webkit-scrollbar-thumb {
-  @apply dark:bg-gray-600-spotify bg-gray-400-spotify;
+.custom-scrollbar body::-webkit-scrollbar-thumb {
+  @apply bg-gray-400 rounded-lg;
+}
+
+.modal-opened body {
+  @apply overflow-hidden;
 }
 
 .fade-enter-active,
